fix: display issues on small screens and font reset

--- a/assets/apps/customizer-controls/src/scss/_typography-font-pair-section.scss
+++ b/assets/apps/customizer-controls/src/scss/_typography-font-pair-section.scss
@@ -70,6 +70,8 @@
 			font-weight: 700;
 			text-align: left;
 			padding: 0 8px;
+			white-space: nowrap;
+			overflow: hidden;
 
 			& + .neve-font-preview {
 				font-size: 16px;
